Correção do overflow responsivo

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Green Growth - Produtos</title>
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/index.css">
@@ -15,6 +16,7 @@
     <header class="topo">
         <!-- BANNER -->
         <section class="banner-placeholder">
+            <img src="./assets/imagens/banner.jpg" alt="">
             <!-- espaço reservado para carrossel/banner -->
         </section>
     </header>
