--- a/frontend/produto-detalhe.html
+++ b/frontend/produto-detalhe.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Green Growth - Detalhes do Produto</title>
   <link rel="stylesheet" href="css/global.css" />
   <link rel="stylesheet" href="css/produto-detalhe.css" />
