--- a/frontend/login-cliente.html
+++ b/frontend/login-cliente.html
@@ -2,61 +2,67 @@
 <html lang="pt-BR">
 
 <head>
-    <meta charset="UTF-8">
-    <title>Login do Cliente</title>
+  <meta charset="UTF-8">
+  <title>Login do Cliente</title>
+  <link rel="stylesheet" href="css/global.css">
+  <link rel="stylesheet" href="css/login-cadastro.css">
 </head>
 
 <body>
-    <h1>Login do Cliente</h1>
+  <div class="form-container">
+    <h1 class="form-titulo">Login</h1>
 
     <form id="formLogin">
-        <label>Email:</label><br>
-        <input type="email" name="email" required><br><br>
+      <div class="form-grupo">
+        <label>Email:</label>
+        <input type="email" name="email" required>
+      </div>
 
-        <label>Senha:</label><br>
-        <input type="password" name="senha" required><br><br>
+      <div class="form-grupo">
+        <label>Senha:</label>
+        <input type="password" name="senha" required>
+      </div>
 
-        <button type="submit">Entrar</button>
+      <button class="btn-form" type="submit">Entrar</button>
     </form>
 
-    <p id="resposta"></p>
+    <p id="resposta" class="mensagem-resposta"></p>
 
-    <p>Ainda não tem uma conta? <a href="cadastro-cliente.html">Criar nova conta</a></p>
+    <p class="form-link">Ainda não tem uma conta? <a href="cadastro-cliente.html">Criar nova conta</a></p>
+  </div>
 
-    <script>
-        document.getElementById("formLogin").addEventListener("submit", async function (e) {
-            e.preventDefault();
+  <script>
+    document.getElementById("formLogin").addEventListener("submit", async function (e) {
+      e.preventDefault();
 
-            const form = e.target;
-            const email = form.email.value;
-            const senha = form.senha.value;
+      const form = e.target;
+      const email = form.email.value;
+      const senha = form.senha.value;
 
-            try {
-                const response = await fetch("http://localhost:8080/api/cliente/login", {
-                    method: "POST",
-                    headers: { "Content-Type": "application/json" },
-                    body: JSON.stringify({ email, senha }),
-                    credentials: "include"
-                });
-
-                const texto = await response.text();
-                document.getElementById("resposta").innerText = texto;
-
-                if (response.ok) {
-                    const clienteResponse = await fetch(`http://localhost:8080/api/cliente/buscar?email=${email}`);
-                    const cliente = await clienteResponse.json();
-
-                    sessionStorage.setItem("clienteLogado", JSON.stringify(cliente));
-
-                    setTimeout(() => {
-                        window.location.href = "index.html";
-                    }, 1000);
-                }
-            } catch (error) {
-                document.getElementById("resposta").innerText = "Email não encontrado.";
-            }
+      try {
+        const response = await fetch("http://localhost:8080/api/cliente/login", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ email, senha }),
+          credentials: "include"
         });
-    </script>
+
+        const texto = await response.text();
+        document.getElementById("resposta").innerText = texto;
+
+        if (response.ok) {
+          const clienteResponse = await fetch(`http://localhost:8080/api/cliente/buscar?email=${email}`);
+          const cliente = await clienteResponse.json();
+          sessionStorage.setItem("clienteLogado", JSON.stringify(cliente));
+          setTimeout(() => {
+            window.location.href = "index.html";
+          }, 1000);
+        }
+      } catch (error) {
+        document.getElementById("resposta").innerText = "Email não encontrado.";
+      }
+    });
+  </script>
 </body>
 
 </html>
