--- a/frontend/cadastro-cliente.html
+++ b/frontend/cadastro-cliente.html
@@ -50,6 +50,46 @@
                 </select>
             </div>
 
+            <p class="subtitulo">Endereço de Faturamento</p>
+
+            <div class="form-grupo">
+                <label>CEP:</label>
+                <input type="text" name="cepF" required>
+            </div>
+
+            <div class="form-grupo">
+                <label>Logradouro:</label>
+                <input type="text" name="logradouroF" required>
+            </div>
+
+            <div class="form-grupo">
+                <label>Número:</label>
+                <input type="text" name="numeroF" required>
+            </div>
+
+            <div class="form-grupo">
+                <label>Complemento:</label>
+                <input type="text" name="complementoF">
+            </div>
+
+            <div class="form-grupo">
+                <label>Bairro:</label>
+                <input type="text" name="bairroF" required>
+            </div>
+
+            <div class="form-grupo">
+                <label>Cidade:</label>
+                <input type="text" name="cidadeF" required>
+            </div>
+
+            <div class="form-grupo">
+                <label>UF:</label>
+                <input type="text" name="ufF" required>
+            </div>
+
+            <!-- Botão de copiar faturamento para entrega -->
+            <button type="button" id="btnCopiarEndereco">Copiar para Endereço de Entrega</button>
+
             <p class="subtitulo">Endereço de Entrega</p>
 
             <div class="form-grupo">
@@ -134,6 +174,15 @@
                 senha: form.senha.value,
                 dataNascimento: form.dataNascimento.value,
                 genero: form.genero.value,
+                faturamento: {
+                    cep: form.cepE.value,
+                    logradouro: form.logradouroE.value,
+                    numero: form.numeroE.value,
+                    complemento: form.complementoE.value,
+                    bairro: form.bairroE.value,
+                    cidade: form.cidadeE.value,
+                    uf: form.ufE.value
+                },
                 enderecosEntrega: [{
                     cep: form.cepE.value,
                     logradouro: form.logradouroE.value,
@@ -144,6 +193,9 @@
                     uf: form.ufE.value
                 }]
             };
+
+
+
 
             try {
                 const response = await fetch("http://localhost:8080/api/cliente/cadastrar", {
@@ -215,6 +267,43 @@
             this.value = this.value.replace(/\D/g, ""); // remove tudo que não for dígito
         });
 
+        // Máscara para CEP de Faturamento
+        document.querySelector('input[name="cepF"]').addEventListener("input", function () {
+            let cep = this.value.replace(/\D/g, "");
+            if (cep.length > 5) {
+                cep = cep.slice(0, 5) + "-" + cep.slice(5, 8);
+            }
+            this.value = cep.slice(0, 9);
+        });
+
+        // Preenchimento automático dos campos de faturamento via CEP
+        document.querySelector('input[name="cepF"]').addEventListener("blur", async function () {
+            const cep = this.value.replace(/\D/g, "");
+            const mensagem = document.getElementById("resposta"); // mesma área que você usa para mostrar mensagens
+            mensagem.innerText = "";
+
+            if (cep.length !== 8) {
+                mensagem.innerText = "CEP inválido. Deve conter 8 dígitos.";
+                return;
+            }
+
+            try {
+                const response = await fetch(`https://viacep.com.br/ws/${cep}/json/`);
+                const data = await response.json();
+
+                if (!data.erro) {
+                    document.querySelector('input[name="logradouroF"]').value = data.logradouro;
+                    document.querySelector('input[name="bairroF"]').value = data.bairro;
+                    document.querySelector('input[name="cidadeF"]').value = data.localidade;
+                    document.querySelector('input[name="ufF"]').value = data.uf;
+                } else {
+                    mensagem.innerText = "CEP não encontrado.";
+                }
+            } catch {
+                mensagem.innerText = "Erro ao consultar o CEP.";
+            }
+        });
+
         // Impede cadastro com data futura
         document.addEventListener("DOMContentLoaded", () => {
             const campoData = document.querySelector('input[name="dataNascimento"]');
@@ -232,7 +321,15 @@
             });
         });
 
-
+        document.getElementById("btnCopiarEndereco").addEventListener("click", () => {
+            document.querySelector('input[name="cepE"]').value = document.querySelector('input[name="cepF"]').value;
+            document.querySelector('input[name="logradouroE"]').value = document.querySelector('input[name="logradouroF"]').value;
+            document.querySelector('input[name="numeroE"]').value = document.querySelector('input[name="numeroF"]').value;
+            document.querySelector('input[name="complementoE"]').value = document.querySelector('input[name="complementoF"]').value;
+            document.querySelector('input[name="bairroE"]').value = document.querySelector('input[name="bairroF"]').value;
+            document.querySelector('input[name="cidadeE"]').value = document.querySelector('input[name="cidadeF"]').value;
+            document.querySelector('input[name="ufE"]').value = document.querySelector('input[name="ufF"]').value;
+        });
 
     </script>
 </body>
